--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@
 # https://github.com/github/linguist.
 
 **/zz_generated.*.go linguist-generated=true
-/client/** linguist-generated=true
+/pkg/client/** linguist-generated=true
